--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Stian Soiland-Reyes" />
   <meta name="author" content="Paul Groth" />
-  <meta name="dcterms.date" content="2019-08-05" />
+  <meta name="dcterms.date" content="2019-08-12" />
   <meta name="keywords" content="research object, linked data, scholarly communication, null" />
   <title>RO-Index: A survey of Research Object usage</title>
   <style>
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">RO-Index: A survey of Research Object usage</h1>
 </header>
-<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/4dfb6d2d1b5960f29768312cffc86dfea40cba2f/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/4dfb6d2d1b5960f29768312cffc86dfea40cba2f">stain/ro-index-paper@4dfb6d2</a> on August 5, 2019. </em></small></p>
+<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/af26ee81d0aae77dca4cb5e83fcaa07ef3765757/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/af26ee81d0aae77dca4cb5e83fcaa07ef3765757">stain/ro-index-paper@af26ee8</a> on August 12, 2019. </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
 <li><p><strong>Stian Soiland-Reyes</strong><br> <img src="images/orcid.svg" alt="ORCID icon" class="inline_icon" /> <a href="https://orcid.org/0000-0001-9842-9718">0000-0001-9842-9718</a> · <img src="images/github.svg" alt="GitHub icon" class="inline_icon" /> <a href="https://github.com/stain">stain</a> · <img src="images/twitter.svg" alt="Twitter icon" class="inline_icon" /> <a href="https://twitter.com/soilandreyes">soilandreyes</a><br> <small> Department of Computer Science, The University of Manchester, UK; Informatics Institute, Faculty of Science, University of Amsterdam, NL · Funded by BioExcel-2 (European Commission H2020-INFRAEDI-02-2018-823830) </small></p></li>
@@ -151,28 +151,33 @@ Ethics policies: All research must have been conducted within an appropriate eth
 </ul>
 <h4 id="ore-based-research-objects">ORE-based research objects</h4>
 <ul>
-<li>CWL Viewer https://view.commonwl.org/workflows <span class="citation" data-cites="xhtkrFLT">[<a href="#ref-xhtkrFLT" role="doc-biblioref">12</a>]</span></li>
-<li>RO Bundle https://researchobject.github.io/specifications/bundle/ <span class="citation" data-cites="dijZpInF">[<a href="#ref-dijZpInF" role="doc-biblioref">5</a>]</span></li>
+<li>CWL Viewer <a href="https://view.commonwl.org/workflows" class="uri">https://view.commonwl.org/workflows</a> <span class="citation" data-cites="xhtkrFLT">[<a href="#ref-xhtkrFLT" role="doc-biblioref">12</a>]</span></li>
+<li>RO Bundle <a href="https://w3id.org/bundle/2014-11-05/" class="uri">https://w3id.org/bundle/2014-11-05/</a> <span class="citation" data-cites="dijZpInF">[<a href="#ref-dijZpInF" role="doc-biblioref">5</a>]</span></li>
 <li>Workflow PROV corpus <span class="citation" data-cites="eV4QvWFF">[<a href="#ref-eV4QvWFF" role="doc-biblioref">13</a>]</span></li>
 <li>CWLProv 10.1093/gigascience/giz095 aka <span class="citation" data-cites="YsYtVdV4">[<a href="#ref-YsYtVdV4" role="doc-biblioref">14</a>]</span></li>
-<li>http://www.rohub.org/ <span class="citation" data-cites="Ut1RxNtm">[<a href="#ref-Ut1RxNtm" role="doc-biblioref">4</a>]</span></li>
-<li>http://rohub.linkeddata.es/</li>
-<li>SEEK: https://fairdomhub.org/investigations</li>
-<li>BDBags with MinID http://minid.bd2k.org/ [<span class="citation" data-cites="3FDNoHin"><a href="#ref-3FDNoHin" role="doc-biblioref">6</a></span>; ]</li>
+<li><a href="http://www.rohub.org/" class="uri">http://www.rohub.org/</a> <span class="citation" data-cites="Ut1RxNtm">[<a href="#ref-Ut1RxNtm" role="doc-biblioref">4</a>]</span></li>
+<li><a href="http://rohub.linkeddata.es/" class="uri">http://rohub.linkeddata.es/</a></li>
+<li>SEEK: <a href="https://fairdomhub.org/investigations" class="uri">https://fairdomhub.org/investigations</a></li>
+<li>BDBags with <a href="http://minid.bd2k.org/">MinID</a> [<span class="citation" data-cites="3FDNoHin"><a href="#ref-3FDNoHin" role="doc-biblioref">6</a></span>; ]</li>
 <li>Zenodo e.g. <span class="citation" data-cites="Ypeevn8I">[<a href="#ref-Ypeevn8I" role="doc-biblioref">15</a>]</span></li>
 <li>Mendeley Data eg <span class="citation" data-cites="1CrTaYKc2">[<a href="#ref-1CrTaYKc2" role="doc-biblioref">16</a>]</span></li>
-<li>Maven https://repository.mygrid.org.uk/artifactory/ops/org/openphacts/data/</li>
-<li>DocumentObject https://github.com/binfalse/DocumentObjectCompiler/</li>
-<li>GitHub</li>
+<li>Maven <a href="https://repository.mygrid.org.uk/artifactory/ops/org/openphacts/data/" class="uri">https://repository.mygrid.org.uk/artifactory/ops/org/openphacts/data/</a></li>
+<li>DocumentObject <a href="https://github.com/binfalse/DocumentObjectCompiler/" class="uri">https://github.com/binfalse/DocumentObjectCompiler/</a></li>
+<li>GitHub search</li>
 <li>EOSC-Life (too early?)</li>
+</ul>
+<h3 id="softwarecontainer-based-research-objects">Software/container-based research objects</h3>
+<ul>
+<li><a href="https://sci-f.github.io/" class="uri">https://sci-f.github.io/</a> <span class="citation" data-cites="OMB8E9Yi">[<a href="#ref-OMB8E9Yi" role="doc-biblioref">17</a>]</span></li>
+<li><a href="https://frictionlessdata.io/specs/data-package/" class="uri">https://frictionlessdata.io/specs/data-package/</a></li>
 </ul>
 <h4 id="nd-generation-ros">2nd generation ROs</h4>
 <ul>
-<li>DataCrate: https://github.com/UTS-eResearch/datacrate/blob/master/spec/1.0/data_crate_specification_v1.0.md#examples</li>
-<li>RO-Crate: https://data.research.uts.edu.au/examples/ro-crate/0.2/</li>
+<li>DataCrate: <a href="https://github.com/UTS-eResearch/datacrate/blob/master/spec/1.0/data_crate_specification_v1.0.md#examples" class="uri">https://github.com/UTS-eResearch/datacrate/blob/master/spec/1.0/data_crate_specification_v1.0.md#examples</a></li>
+<li>RO-Crate: <a href="https://data.research.uts.edu.au/examples/ro-crate/0.2/" class="uri">https://data.research.uts.edu.au/examples/ro-crate/0.2/</a></li>
 </ul>
 <h3 id="manifest-formats">Manifest formats</h3>
-<p>A key characteristic of a Research Object is the presence of a <em>manifest</em> that describes and relates the content. However, multiple potential formats and conventions have emerged for how to serialize such a format.</p>
+<p>A key characteristic of a Research Object is the presence of a <em>manifest</em> that describes and relates the content. However, multiple potential formats and conventions have emerged for how to serialize such a format. (..)</p>
 <h2 id="conclusionsdiscussion" class="page_break_before">Conclusions/Discussion</h2>
 <h2 id="data-and-software-availability" class="page_break_before">Data (and Software) Availability</h2>
 <!--
@@ -313,6 +318,12 @@ DOI: <a href="https://doi.org/10.5281/zenodo.1465897">10.5281/zenodo.1465897</a>
 Stian Soiland-Reyes<br />
 <em>Mendeley</em> (2018-12-04) <a href="https://doi.org/gf5m6h">https://doi.org/gf5m6h</a><br />
 DOI: <a href="https://doi.org/10.17632/6wtpgr3kbj.1">10.17632/6wtpgr3kbj.1</a></p>
+</div>
+<div id="ref-OMB8E9Yi">
+<p>17. <strong>The Scientific Filesystem</strong><br />
+Vanessa Sochat<br />
+<em>GigaScience</em> (2018-03-13) <a href="https://doi.org/gdwq7f">https://doi.org/gdwq7f</a><br />
+DOI: <a href="https://doi.org/10.1093/gigascience/giy023">10.1093/gigascience/giy023</a> · PMID: <a href="https://www.ncbi.nlm.nih.gov/pubmed/29718213">29718213</a> · PMCID: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5952957">PMC5952957</a></p>
 </div>
 </div>
 <!-- default theme -->
